# firewall-man

./: .gitignore  AGENTS.md  Cargo.toml  Dockerfile  Makefile  README.en.md  README.ja.md  README.md  README.tw.md  compile-musl.sh  firewall-man.sqlite3  firewall-man.sqlite3.bak  first.sh  prompt.md
backend/: Cargo.toml  build-musl.sh  firewall-man.sqlite3  kyklos.sqlite3
backend/src/: db.rs  main.rs  server.rs
backend/src/apps/: mod.rs
backend/src/apps/apiman/: mod.rs
backend/src/apps/dbman/: mod.rs
backend/src/apps/network/: mod.rs
backend/src/apps/settings/: mod.rs
backend/src/apps/workflow/: mod.rs
backend/src/dbman/: mod.rs
backend/src/logger/: mod.rs
backend/src/net/samba/: mod.rs
backend/src/net/snmp/: mod.rs
backend/src/netplan/: mod.rs
backend/src/nginx/: mod.rs
backend/src/security/: mod.rs
backend/src/services/: mod.rs  oauth2_server.rs  reverse_proxy.rs
backend/src/services/memcache/: cmd.rs  mod.rs  parser.rs  server.rs  store.rs
backend/src/services/reverse-proxy/src/: lib.rs
backend/src/sftp/: mod.rs
backend/src/sys/: crontab.rs  mod.rs
backend/src/tools/: mod.rs
docs/: checklist-impl-01.md  usage-guide.en.md  usage-guide.ja.md  usage-guide.zh.md
docs/op/: usage-guide.en.md  usage-guide.ja.md  usage-guide.zh.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/public/: app.js  app_bootstrap.js  app_dashboard.js  app_data_modules.js  app_menu.js  app_network_events.js  env.js  (+1 more)
src/: ai.rs  main.rs  server.rs  shell.rs  system.rs
web/: index.html
web-legacy/: index.html
(+77 files in other folders)
