[package]
name = "kyklos"
version = "0.1.0"
edition = "2021"
description = "iptables Web 管理平臺 - Rust 實作"

[dependencies]
axum = { version = "0.7", features = ["ws"] }
futures-util = { version = "0.3", features = ["sink"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regex = "1"
nom = "1.2"
time = "0.1"
getopts = "0.2"
hyper = { version = "0.14.18", features = ["client", "server", "http1", "tcp"] }
lazy_static = "1.4"
once_cell = "1"
async-trait = "0.1"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "fs"] }
rust-embed = "8"
tracing = "0.1"
tracing-subscriber = "0.3"
uuid = { version = "1", features = ["v4"] }
base64 = "0.22"
chrono = "0.4"
cron = "0.15"
cron_tab = { version = "0.2.13", features = ["async"] }
rlua = "0.20.1"
rusqlite = { version = "0.32", features = ["bundled"] }
pcap = "2"
snmp2 = "0.4"
ssh2 = "0.9"
smb2 = "0.11"

[target.'cfg(unix)'.dependencies]
nix = { version = "0.29", features = ["fs", "term", "process", "signal", "ioctl"] }

[features]
__bench = []

[build-dependencies]
chrono = "0.4"
